[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oto"
version = "0.4.0"
description = "Preprocess Markdown study notes and synthesize speech via Kokoro TTS"
requires-python = ">=3.10"
dependencies = [
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.13.1",
    "numpy>=2.0",
]

[project.scripts]
oto = "oto.cli:main"
